pca-svm/k8s/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: pca-svm
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /upload/
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 80
